themes/application.css
/* Font
-----------------------------------------------------------------------------------------------------------*/
.main_button {
	font-size: 16px;
	color: grey;
	font-family: Helvetica, sans-serif;
	font-weight: 200;
}
.ext_button {
	font-size: 16px;
	color: white;
	font-family: Helvetica, sans-serif;
	font-weight: 200;
	/*background-color: #3e94d1;*/
}

.drop_button {
	font-size: 16px;
	color: grey;
	font-family: Helvetica, sans-serif;
	height: 40px;
	/*vertical-align: middle;*/
	text-align: center;
	padding: 0px;
	font-weight: 200;
	line-height: 40px;
}

.date_picker {
	color: #07c;
	border: 2px solid #07c;
	padding: 2px 5px;
}

.div_dim {
	margin: 15px;
}

input.bigCheckbox { 
	width: 40px; 
	height: 40px; 
}

